<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * This file is part of Bright Day.
 * 
 * Bright Day is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Bright Day is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with Bright Day.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/OuterScroll"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/BdRelLay">




<LinearLayout android:layout_width="fill_parent" android:id="@+id/GraphLayoutHolder" android:layout_height="150dip"></LinearLayout>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/MinBrightText" android:layout_below="@id/GraphLayoutHolder" android:text="@string/min_brightness"></TextView>
<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/MinBrightnessSeekBar" android:max="255" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:secondaryProgress="0" android:layout_below="@id/MinBrightText"></SeekBar>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/MaxBrightText" android:layout_below="@id/MinBrightnessSeekBar" android:text="@string/max_brightness"></TextView>
<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/MaxBrightnessSeekBar" android:progress="255" android:max="255" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_below="@id/MaxBrightText"></SeekBar>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ShiftText" android:layout_below="@id/MaxBrightnessSeekBar" android:text="@string/shift"></TextView>
<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:id="@+id/ShiftSeekBar" android:max="100" android:progress="50" android:layout_below="@id/ShiftText"></SeekBar>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/GammaText" android:layout_below="@id/ShiftSeekBar" android:text="@string/gamma"></TextView>
<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:max="100" android:progress="0" android:id="@+id/GammaSeekBar" android:layout_below="@id/GammaText"></SeekBar><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/GammaSeekBar" android:id="@+id/StretchText" android:text="@string/stretch"></TextView>



<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:max="100" android:id="@+id/StretchSeekBar" android:layout_below="@id/StretchText" android:progress="50"></SeekBar>
<!--<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:max="100" android:layout_below="@id/StretchSeekBar" android:progress="50" android:id="@+id/StretchYSeekBar"></SeekBar>-->
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/SaveButton" android:layout_alignParentRight="true" android:visibility="visible" android:text="Save"></Button><TextView android:text="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:id="@+id/gv1" android:layout_below="@+id/GraphLayoutHolder"></TextView>

<TextView android:text="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/gv2" android:layout_alignParentRight="true" android:layout_below="@+id/MinBrightnessSeekBar"></TextView>
<TextView android:text="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/gv3" android:layout_alignParentRight="true" android:layout_below="@+id/MaxBrightnessSeekBar"></TextView>


<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BdRunningLayout" android:padding="1dip" android:visibility="invisible"><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BdRunningSubLayout" android:padding="5dip"><ImageView android:id="@+id/BdRunningImage" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageView>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/BdRunningText" android:text="@string/bdnotrunning"></TextView></LinearLayout></LinearLayout>

<LinearLayout android:layout_height="wrap_content" android:padding="1dip" android:layout_width="fill_parent" android:id="@+id/BdInfo" android:layout_margin="20dip" android:visibility="invisible">
	<LinearLayout android:layout_height="wrap_content" android:padding="5dip" android:layout_width="fill_parent" android:id="@+id/BdInfoSub">
		<TextView android:layout_height="wrap_content" android:text="@string/bdnotrunning" android:layout_width="fill_parent" android:id="@+id/BdInfoText" android:textStyle="bold" android:textSize="18dip">
		</TextView>
	</LinearLayout>
</LinearLayout>




</RelativeLayout>



</ScrollView>
